test/fail_compilation/ice10727a.d
// REQUIRED_ARGS: -c
/*
TEST_OUTPUT:
---
fail_compilation/imports/foo10727a.d(36): Error: undefined identifier `Frop`
---
*/

import imports.foo10727a;
